// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Buttons defaultTheme 1`] = `
<div
  className={undefined}
>
  <div>
    <h2>
      Default Button
    </h2>
    <button
      className=""
      disabled={false}
      hidden={false}
      onClick={null}
      type="button"
    >
      Label
    </button>
  </div>
  <div>
    <h2>
      Outline
    </h2>
    <button
      className=""
      disabled={false}
      hidden={false}
      onClick={null}
      type="button"
    >
      Label
    </button>
  </div>
  <div>
    <h2>
      Disabled
    </h2>
    <button
      className=""
      disabled={true}
      hidden={false}
      onClick={null}
      type="button"
    >
      Label
    </button>
    <button
      className=""
      disabled={true}
      hidden={false}
      onClick={null}
      type="button"
    >
      Label
    </button>
  </div>
  <div>
    <h2>
      Sizes
    </h2>
    <button
      className=""
      disabled={false}
      hidden={false}
      onClick={null}
      type="button"
    >
      Tiny
    </button>
    <button
      className=""
      disabled={false}
      hidden={false}
      onClick={null}
      type="button"
    >
      Small
    </button>
    <button
      className=""
      disabled={false}
      hidden={false}
      onClick={null}
      type="button"
    >
      Default
    </button>
    <button
      className=""
      disabled={false}
      hidden={false}
      onClick={null}
      type="button"
    >
      Large
    </button>
    <button
      className=""
      disabled={false}
      hidden={false}
      onClick={null}
      type="button"
    >
      Extra-large
    </button>
  </div>
  <div>
    <h2>
      Clean buttons for icons
    </h2>
    <button
      className=""
      disabled={false}
      hidden={false}
      onClick={null}
      type="button"
    >
      <svg
        fill="currentColor"
        height={30}
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "color": undefined,
            "verticalAlign": "middle",
          }
        }
        viewBox="0 0 40 40"
        width={30}
      >
        <g>
          <path
            d="m33.2 18.4v3.2h-20.3l9.3 9.4-2.3 2.4-13.4-13.4 13.4-13.4 2.4 2.4-9.4 9.4h20.3z"
          />
        </g>
      </svg>
    </button>
    <button
      className=""
      disabled={false}
      hidden={false}
      onClick={null}
      type="button"
    >
      <svg
        fill="currentColor"
        height={30}
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "color": undefined,
            "verticalAlign": "middle",
          }
        }
        viewBox="0 0 40 40"
        width={30}
      >
        <g>
          <path
            d="m31.8 10.7l-9.3 9.3 9.3 9.3-2.4 2.3-9.3-9.3-9.3 9.3-2.3-2.3 9.3-9.3-9.3-9.3 2.3-2.3 9.3 9.3 9.3-9.3z"
          />
        </g>
      </svg>
    </button>
  </div>
  <div>
    <h2>
      Full
    </h2>
    <button
      className="undefined"
      disabled={false}
      hidden={false}
      onClick={null}
      type="button"
    >
      Full
    </button>
  </div>
  <div>
    <h2>
      Text align
    </h2>
    <button
      className=""
      disabled={false}
      hidden={false}
      onClick={null}
      type="button"
    >
      Center
    </button>
    <button
      className=""
      disabled={false}
      hidden={false}
      onClick={null}
      type="button"
    >
      Left
    </button>
    <button
      className=""
      disabled={false}
      hidden={false}
      onClick={null}
      type="button"
    >
      Right
    </button>
  </div>
  <div>
    <h2>
      Relevance
    </h2>
    <button
      className=""
      disabled={false}
      hidden={false}
      onClick={null}
      type="button"
    >
      High
    </button>
    <button
      className=""
      disabled={false}
      hidden={false}
      onClick={null}
      type="button"
    >
      Normal
    </button>
    <button
      className=""
      disabled={false}
      hidden={false}
      onClick={null}
      type="button"
    >
      Low
    </button>
  </div>
</div>
`;

exports[`Storyshots ErrorBoundary Catch Exception 1`] = `
<div
  className={undefined}
>
  <h1>
    Click 3 times in this button to trigger an exception
  </h1>
  <button
    onClick={[Function]}
  >
    0
  </button>
</div>
`;

exports[`Storyshots Footer Sample 1`] = `
<div
  className={undefined}
>
  <footer>
    <div
      className=""
    >
      <div
        className=""
      >
        <div
          className="undefined"
        >
          <button
            className=""
            disabled={false}
            hidden={false}
            onClick={[Function]}
            type="button"
          >
            Continuar
          </button>
        </div>
      </div>
      <div
        className=""
      >
        <div
          className=""
        >
          <svg
            fill="currentColor"
            height="1em"
            preserveAspectRatio="xMidYMid meet"
            style={
              Object {
                "color": undefined,
                "verticalAlign": "middle",
              }
            }
            viewBox="0 0 40 40"
            width="1em"
          >
            <g>
              <path
                d="m30 33.4v-16.8h-20v16.8h20z m-15.2-23.4v3.4h10.4v-3.4c0-2.8-2.4-5.2-5.2-5.2s-5.2 2.4-5.2 5.2z m15.2 3.4c1.8 0 3.4 1.4 3.4 3.2v16.8c0 1.8-1.6 3.2-3.4 3.2h-20c-1.8 0-3.4-1.4-3.4-3.2v-16.8c0-1.8 1.6-3.2 3.4-3.2h1.6v-3.4c0-4.6 3.8-8.4 8.4-8.4s8.4 3.8 8.4 8.4v3.4h1.6z m-10 15c-1.8 0-3.4-1.6-3.4-3.4s1.6-3.4 3.4-3.4 3.4 1.6 3.4 3.4-1.6 3.4-3.4 3.4z"
              />
            </g>
          </svg>
          Ambiente Seguro
        </div>
        <div
          className=""
        >
          Powered by 
          Pagar.me
        </div>
      </div>
    </div>
  </footer>
</div>
`;

exports[`Storyshots Forms Dropdown 1`] = `
<div
  className={undefined}
>
  <div>
    <h2>
      Dropdown
    </h2>
    <section>
      <h3>
        Default
      </h3>
      <div>
        <div
          className=""
        >
          <div
            className={undefined}
            id="shortid-mock"
            onBlur={[Function]}
            onClick={[Function]}
            role="listbox"
            tabIndex="0"
          >
            <label
              className={undefined}
              htmlFor="shortid-mock"
            >
              Tartarugas ninjas
            </label>
            <div
              className={undefined}
            >
              <svg
                fill="currentColor"
                height="1em"
                preserveAspectRatio="xMidYMid meet"
                style={
                  Object {
                    "color": undefined,
                    "verticalAlign": "middle",
                  }
                }
                viewBox="0 0 40 40"
                width="1em"
              >
                <g>
                  <path
                    d="m31 16.4q0 0.3-0.2 0.5l-10.4 10.4q-0.3 0.3-0.5 0.3t-0.6-0.3l-10.4-10.4q-0.2-0.2-0.2-0.5t0.2-0.5l1.2-1.1q0.2-0.2 0.5-0.2t0.5 0.2l8.8 8.8 8.7-8.8q0.3-0.2 0.5-0.2t0.6 0.2l1.1 1.1q0.2 0.2 0.2 0.5z"
                  />
                </g>
              </svg>
            </div>
            
          </div>
          <div
            className=""
          >
            <div
              style={
                Object {
                  "height": 100,
                  "overflow": "hidden",
                  "position": "relative",
                  "width": "100%",
                }
              }
            >
              <div
                style={
                  Object {
                    "WebkitOverflowScrolling": "touch",
                    "bottom": 0,
                    "left": 0,
                    "marginBottom": 0,
                    "marginRight": 0,
                    "overflow": "scroll",
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <div
                  aria-selected="false"
                  className=""
                  onClick={[Function]}
                  role="option"
                  tabIndex={0}
                >
                  Leonardo
                </div>
                <div
                  aria-selected="false"
                  className=""
                  onClick={[Function]}
                  role="option"
                  tabIndex={1}
                >
                  Donatello
                </div>
                <div
                  aria-selected="false"
                  className=""
                  onClick={[Function]}
                  role="option"
                  tabIndex={2}
                >
                  Raphael
                </div>
                <div
                  aria-selected="false"
                  className=""
                  onClick={[Function]}
                  role="option"
                  tabIndex={3}
                >
                  Michelangelo
                </div>
                <div
                  aria-selected="false"
                  className=""
                  onClick={[Function]}
                  role="option"
                  tabIndex={4}
                >
                  Mr. Splinter
                </div>
                <div
                  aria-selected="false"
                  className=""
                  onClick={[Function]}
                  role="option"
                  tabIndex={5}
                >
                  April O'Neil
                </div>
              </div>
              <div
                style={
                  Object {
                    "borderRadius": 3,
                    "bottom": 2,
                    "display": "none",
                    "height": 6,
                    "left": 2,
                    "position": "absolute",
                    "right": 2,
                  }
                }
              >
                <div
                  style={
                    Object {
                      "backgroundColor": "rgba(0,0,0,.2)",
                      "borderRadius": "inherit",
                      "cursor": "pointer",
                      "display": "block",
                      "height": "100%",
                      "position": "relative",
                    }
                  }
                />
              </div>
              <div
                style={
                  Object {
                    "borderRadius": 3,
                    "bottom": 2,
                    "display": "none",
                    "position": "absolute",
                    "right": 2,
                    "top": 2,
                    "width": 6,
                  }
                }
              >
                <div
                  className={undefined}
                />
              </div>
            </div>
          </div>
          
        </div>
        <div>
          <p>
            <strong>
              On change
            </strong>
          </p>
          <p>
            Name: 
            
          </p>
          <p>
            Value: 
            
          </p>
        </div>
      </div>
    </section>
    <section>
      <h3>
        Passing a selected value by default
      </h3>
      <div>
        <div
          className=""
        >
          <div
            className={undefined}
            id="shortid-mock"
            onBlur={[Function]}
            onClick={[Function]}
            role="listbox"
            tabIndex="0"
          >
            <label
              className={undefined}
              htmlFor="shortid-mock"
            >
              Tartarugas ninjas
            </label>
            <div
              className={undefined}
            >
              <svg
                fill="currentColor"
                height="1em"
                preserveAspectRatio="xMidYMid meet"
                style={
                  Object {
                    "color": undefined,
                    "verticalAlign": "middle",
                  }
                }
                viewBox="0 0 40 40"
                width="1em"
              >
                <g>
                  <path
                    d="m31 16.4q0 0.3-0.2 0.5l-10.4 10.4q-0.3 0.3-0.5 0.3t-0.6-0.3l-10.4-10.4q-0.2-0.2-0.2-0.5t0.2-0.5l1.2-1.1q0.2-0.2 0.5-0.2t0.5 0.2l8.8 8.8 8.7-8.8q0.3-0.2 0.5-0.2t0.6 0.2l1.1 1.1q0.2 0.2 0.2 0.5z"
                  />
                </g>
              </svg>
            </div>
            <div
              className={undefined}
            >
              Michelangelo
            </div>
          </div>
          <div
            className=""
          >
            <div
              style={
                Object {
                  "height": 100,
                  "overflow": "hidden",
                  "position": "relative",
                  "width": "100%",
                }
              }
            >
              <div
                style={
                  Object {
                    "WebkitOverflowScrolling": "touch",
                    "bottom": 0,
                    "left": 0,
                    "marginBottom": 0,
                    "marginRight": 0,
                    "overflow": "scroll",
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <div
                  aria-selected="false"
                  className=""
                  onClick={[Function]}
                  role="option"
                  tabIndex={0}
                >
                  Leonardo
                </div>
                <div
                  aria-selected="false"
                  className=""
                  onClick={[Function]}
                  role="option"
                  tabIndex={1}
                >
                  Donatello
                </div>
                <div
                  aria-selected="false"
                  className=""
                  onClick={[Function]}
                  role="option"
                  tabIndex={2}
                >
                  Raphael
                </div>
                <div
                  aria-selected="true"
                  className="undefined"
                  onClick={[Function]}
                  role="option"
                  tabIndex={3}
                >
                  Michelangelo
                </div>
                <div
                  aria-selected="false"
                  className=""
                  onClick={[Function]}
                  role="option"
                  tabIndex={4}
                >
                  Mr. Splinter
                </div>
                <div
                  aria-selected="false"
                  className=""
                  onClick={[Function]}
                  role="option"
                  tabIndex={5}
                >
                  April O'Neil
                </div>
              </div>
              <div
                style={
                  Object {
                    "borderRadius": 3,
                    "bottom": 2,
                    "display": "none",
                    "height": 6,
                    "left": 2,
                    "position": "absolute",
                    "right": 2,
                  }
                }
              >
                <div
                  style={
                    Object {
                      "backgroundColor": "rgba(0,0,0,.2)",
                      "borderRadius": "inherit",
                      "cursor": "pointer",
                      "display": "block",
                      "height": "100%",
                      "position": "relative",
                    }
                  }
                />
              </div>
              <div
                style={
                  Object {
                    "borderRadius": 3,
                    "bottom": 2,
                    "display": "none",
                    "position": "absolute",
                    "right": 2,
                    "top": 2,
                    "width": 6,
                  }
                }
              >
                <div
                  className={undefined}
                />
              </div>
            </div>
          </div>
          
        </div>
        <div>
          <p>
            <strong>
              On change
            </strong>
          </p>
          <p>
            Name: 
            
          </p>
          <p>
            Value: 
            
          </p>
        </div>
      </div>
    </section>
    <section>
      <h3>
        Disabled
      </h3>
      <div>
        <div
          className=""
        >
          <div
            className={undefined}
            id="shortid-mock"
            onBlur={[Function]}
            onClick={[Function]}
            role="listbox"
            tabIndex="0"
          >
            <label
              className={undefined}
              htmlFor="shortid-mock"
            >
              Tartarugas ninjas
            </label>
            <div
              className={undefined}
            >
              <svg
                fill="currentColor"
                height="1em"
                preserveAspectRatio="xMidYMid meet"
                style={
                  Object {
                    "color": undefined,
                    "verticalAlign": "middle",
                  }
                }
                viewBox="0 0 40 40"
                width="1em"
              >
                <g>
                  <path
                    d="m31 16.4q0 0.3-0.2 0.5l-10.4 10.4q-0.3 0.3-0.5 0.3t-0.6-0.3l-10.4-10.4q-0.2-0.2-0.2-0.5t0.2-0.5l1.2-1.1q0.2-0.2 0.5-0.2t0.5 0.2l8.8 8.8 8.7-8.8q0.3-0.2 0.5-0.2t0.6 0.2l1.1 1.1q0.2 0.2 0.2 0.5z"
                  />
                </g>
              </svg>
            </div>
            
          </div>
          <div
            className=""
          >
            <div
              style={
                Object {
                  "height": 100,
                  "overflow": "hidden",
                  "position": "relative",
                  "width": "100%",
                }
              }
            >
              <div
                style={
                  Object {
                    "WebkitOverflowScrolling": "touch",
                    "bottom": 0,
                    "left": 0,
                    "marginBottom": 0,
                    "marginRight": 0,
                    "overflow": "scroll",
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <div
                  aria-selected="false"
                  className=""
                  onClick={[Function]}
                  role="option"
                  tabIndex={0}
                >
                  Leonardo
                </div>
                <div
                  aria-selected="false"
                  className=""
                  onClick={[Function]}
                  role="option"
                  tabIndex={1}
                >
                  Donatello
                </div>
                <div
                  aria-selected="false"
                  className=""
                  onClick={[Function]}
                  role="option"
                  tabIndex={2}
                >
                  Raphael
                </div>
                <div
                  aria-selected="false"
                  className=""
                  onClick={[Function]}
                  role="option"
                  tabIndex={3}
                >
                  Michelangelo
                </div>
                <div
                  aria-selected="false"
                  className=""
                  onClick={[Function]}
                  role="option"
                  tabIndex={4}
                >
                  Mr. Splinter
                </div>
                <div
                  aria-selected="false"
                  className=""
                  onClick={[Function]}
                  role="option"
                  tabIndex={5}
                >
                  April O'Neil
                </div>
              </div>
              <div
                style={
                  Object {
                    "borderRadius": 3,
                    "bottom": 2,
                    "display": "none",
                    "height": 6,
                    "left": 2,
                    "position": "absolute",
                    "right": 2,
                  }
                }
              >
                <div
                  style={
                    Object {
                      "backgroundColor": "rgba(0,0,0,.2)",
                      "borderRadius": "inherit",
                      "cursor": "pointer",
                      "display": "block",
                      "height": "100%",
                      "position": "relative",
                    }
                  }
                />
              </div>
              <div
                style={
                  Object {
                    "borderRadius": 3,
                    "bottom": 2,
                    "display": "none",
                    "position": "absolute",
                    "right": 2,
                    "top": 2,
                    "width": 6,
                  }
                }
              >
                <div
                  className={undefined}
                />
              </div>
            </div>
          </div>
          
        </div>
        <div>
          <p>
            <strong>
              On change
            </strong>
          </p>
          <p>
            Name: 
            
          </p>
          <p>
            Value: 
            
          </p>
        </div>
      </div>
    </section>
    <section>
      <h3>
        Error
      </h3>
      <div>
        <div
          className="undefined"
        >
          <div
            className={undefined}
            id="shortid-mock"
            onBlur={[Function]}
            onClick={[Function]}
            role="listbox"
            tabIndex="0"
          >
            <label
              className={undefined}
              htmlFor="shortid-mock"
            >
              Tartarugas ninjas
            </label>
            <div
              className={undefined}
            >
              <svg
                fill="currentColor"
                height="1em"
                preserveAspectRatio="xMidYMid meet"
                style={
                  Object {
                    "color": undefined,
                    "verticalAlign": "middle",
                  }
                }
                viewBox="0 0 40 40"
                width="1em"
              >
                <g>
                  <path
                    d="m31 16.4q0 0.3-0.2 0.5l-10.4 10.4q-0.3 0.3-0.5 0.3t-0.6-0.3l-10.4-10.4q-0.2-0.2-0.2-0.5t0.2-0.5l1.2-1.1q0.2-0.2 0.5-0.2t0.5 0.2l8.8 8.8 8.7-8.8q0.3-0.2 0.5-0.2t0.6 0.2l1.1 1.1q0.2 0.2 0.2 0.5z"
                  />
                </g>
              </svg>
            </div>
            
          </div>
          <div
            className=""
          >
            <div
              style={
                Object {
                  "height": 100,
                  "overflow": "hidden",
                  "position": "relative",
                  "width": "100%",
                }
              }
            >
              <div
                style={
                  Object {
                    "WebkitOverflowScrolling": "touch",
                    "bottom": 0,
                    "left": 0,
                    "marginBottom": 0,
                    "marginRight": 0,
                    "overflow": "scroll",
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <div
                  aria-selected="false"
                  className=""
                  onClick={[Function]}
                  role="option"
                  tabIndex={0}
                >
                  Leonardo
                </div>
                <div
                  aria-selected="false"
                  className=""
                  onClick={[Function]}
                  role="option"
                  tabIndex={1}
                >
                  Donatello
                </div>
                <div
                  aria-selected="false"
                  className=""
                  onClick={[Function]}
                  role="option"
                  tabIndex={2}
                >
                  Raphael
                </div>
                <div
                  aria-selected="false"
                  className=""
                  onClick={[Function]}
                  role="option"
                  tabIndex={3}
                >
                  Michelangelo
                </div>
                <div
                  aria-selected="false"
                  className=""
                  onClick={[Function]}
                  role="option"
                  tabIndex={4}
                >
                  Mr. Splinter
                </div>
                <div
                  aria-selected="false"
                  className=""
                  onClick={[Function]}
                  role="option"
                  tabIndex={5}
                >
                  April O'Neil
                </div>
              </div>
              <div
                style={
                  Object {
                    "borderRadius": 3,
                    "bottom": 2,
                    "display": "none",
                    "height": 6,
                    "left": 2,
                    "position": "absolute",
                    "right": 2,
                  }
                }
              >
                <div
                  style={
                    Object {
                      "backgroundColor": "rgba(0,0,0,.2)",
                      "borderRadius": "inherit",
                      "cursor": "pointer",
                      "display": "block",
                      "height": "100%",
                      "position": "relative",
                    }
                  }
                />
              </div>
              <div
                style={
                  Object {
                    "borderRadius": 3,
                    "bottom": 2,
                    "display": "none",
                    "position": "absolute",
                    "right": 2,
                    "top": 2,
                    "width": 6,
                  }
                }
              >
                <div
                  className={undefined}
                />
              </div>
            </div>
          </div>
          <span
            className={undefined}
          >
            Something is wrong
          </span>
        </div>
        <div>
          <p>
            <strong>
              On change
            </strong>
          </p>
          <p>
            Name: 
            
          </p>
          <p>
            Value: 
            
          </p>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Forms Inputs 1`] = `
<div
  className={undefined}
>
  <div>
    <h2>
      Text Inputs
    </h2>
    <section>
      <h3>
        Default
      </h3>
      <div
        className=""
      >
        <div
          className={undefined}
        >
          <div
            className=""
          >
            <input
              className=""
              disabled={false}
              id="default"
              maxLength="200"
              name="default"
              onBlur={null}
              onChange={[Function]}
              placeholder="Digite seu nome"
              type="text"
              value=""
            />
            
            <label
              className=""
              htmlFor="default"
            >
              Nome
            </label>
          </div>
          
        </div>
      </div>
    </section>
    <section>
      <h3>
        Error
      </h3>
      <div
        className=""
      >
        <div
          className={undefined}
        >
          <div
            className="undefined"
          >
            <input
              className=""
              disabled={false}
              id="error"
              maxLength="200"
              name="error"
              onBlur={null}
              onChange={[Function]}
              placeholder="Digite seu e-mail"
              type="text"
              value=""
            />
            
            <label
              className=""
              htmlFor="error"
            >
              E-mail
            </label>
          </div>
          <p
            className={undefined}
          >
            Email no formato errado
          </p>
        </div>
      </div>
    </section>
    <section>
      <h3>
        Multiline default
      </h3>
      <div
        className=""
      >
        <div
          className={undefined}
        >
          <div
            className=""
          >
            <textarea
              className=""
              disabled={false}
              maxLength="200"
              name="multiline"
              onBlur={null}
              onChange={[Function]}
              placeholder="Tecle enter para saltar uma linha"
              rows="1"
              value=""
            />
            
            <label
              className=""
              htmlFor="multiline"
            >
              Mensagem
            </label>
            <div
              className={undefined}
            >
              
              <br />
            </div>
          </div>
          
        </div>
      </div>
    </section>
    <section>
      <h3>
        Icon default
      </h3>
      <div
        className=""
      >
        <div
          className={undefined}
        >
          <svg
            fill="currentColor"
            height={20}
            preserveAspectRatio="xMidYMid meet"
            style={
              Object {
                "color": undefined,
                "verticalAlign": "middle",
              }
            }
            viewBox="0 0 40 40"
            width={20}
          >
            <g>
              <path
                d="m15.5 10.8q0.4 0 0.6-0.3t0.3-0.6-0.3-0.6-0.6-0.3-0.6 0.3-0.2 0.6 0.2 0.6 0.6 0.3z m9.4 0q0.4 0 0.6-0.3t0.3-0.6-0.3-0.6-0.6-0.3-0.6 0.3-0.2 0.6 0.2 0.6 0.6 0.3z m-18.1 4.1q0.9 0 1.6 0.7t0.7 1.6v9.6q0 0.9-0.7 1.6t-1.6 0.7-1.6-0.7-0.7-1.6v-9.6q0-1 0.7-1.6t1.6-0.7z m23.7 0.4v14.9q0 1-0.8 1.7t-1.7 0.7h-1.6v5.1q0 1-0.7 1.6t-1.6 0.7-1.7-0.7-0.6-1.6v-5.1h-3.1v5.1q0 1-0.7 1.6t-1.6 0.7q-1 0-1.6-0.7t-0.7-1.6l0-5.1h-1.7q-1 0-1.7-0.7t-0.7-1.7v-14.9h20.5z m-5.2-9q2.4 1.2 3.8 3.4t1.4 4.8h-20.6q0-2.6 1.4-4.8t3.8-3.4l-1.5-3q-0.2-0.2 0.1-0.4 0.3-0.1 0.4 0.1l1.6 3q2.1-1 4.5-1t4.5 1l1.6-3q0.2-0.2 0.5-0.1 0.2 0.2 0.1 0.4z m10.6 10.9v9.6q0 0.9-0.6 1.6t-1.7 0.7q-0.9 0-1.6-0.7t-0.6-1.6v-9.6q0-1 0.6-1.7t1.6-0.6q1 0 1.7 0.6t0.6 1.7z"
              />
            </g>
          </svg>
        </div>
        <div
          className={undefined}
        >
          <div
            className=""
          >
            <input
              className=""
              disabled={false}
              id="icon"
              maxLength="200"
              name="icon"
              onBlur={null}
              onChange={[Function]}
              placeholder="It's so cool"
              type="text"
              value=""
            />
            
            <label
              className=""
              htmlFor="icon"
            >
              Com icone
            </label>
          </div>
          
        </div>
      </div>
    </section>
    <section>
      <h3>
        Password default
      </h3>
      <div
        className=""
      >
        <div
          className={undefined}
        >
          <div
            className=""
          >
            <input
              className=""
              disabled={false}
              id="password"
              maxLength="200"
              name="password"
              onBlur={null}
              onChange={[Function]}
              placeholder="Digite sua senha"
              type="password"
              value=""
            />
            
            <label
              className=""
              htmlFor="password"
            >
              Senha
            </label>
          </div>
          
        </div>
      </div>
    </section>
    <section>
      <h3>
        Disabled
      </h3>
      <div
        className="undefined"
      >
        <div
          className={undefined}
        >
          <div
            className=""
          >
            <input
              className=""
              disabled={true}
              id="email_disabled"
              maxLength="200"
              name="email_disabled"
              onBlur={null}
              onChange={null}
              placeholder="eae"
              type="text"
              value=""
            />
            
            <label
              className=""
              htmlFor="email_disabled"
            >
              Digite seu email
            </label>
          </div>
          <p
            className={undefined}
          >
            Texto de apoio
          </p>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Grid Column sizes 1`] = `
<div
  className={undefined}
>
  <div
    className=""
  >
    <div
      className=""
    >
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          1 column
        </div>
      </div>
    </div>
    <div
      className=""
    >
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          2 columns
        </div>
      </div>
    </div>
    <div
      className=""
    >
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          3 columns
        </div>
      </div>
    </div>
    <div
      className=""
    >
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          4 columns
        </div>
      </div>
    </div>
    <div
      className=""
    >
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          5 columns
        </div>
      </div>
    </div>
    <div
      className=""
    >
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          6 columns
        </div>
      </div>
    </div>
    <div
      className=""
    >
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          7 columns
        </div>
      </div>
    </div>
    <div
      className=""
    >
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          8 columns
        </div>
      </div>
    </div>
    <div
      className=""
    >
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          9 columns
        </div>
      </div>
    </div>
    <div
      className=""
    >
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          10 columns
        </div>
      </div>
    </div>
    <div
      className=""
    >
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          11 columns
        </div>
      </div>
    </div>
    <div
      className=""
    >
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          12 columns
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid Flexible 1`] = `
<div
  className={undefined}
>
  <div
    className=""
  >
    <div
      className=""
    >
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
        </div>
      </div>
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        />
      </div>
    </div>
    <div
      className=""
    >
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
        </div>
      </div>
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        />
      </div>
    </div>
    <div
      className=""
    >
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          Loremipsumdolorsitamet,consetetursadipscingelitr,seddiamnonumyeirmodtemporinviduntutlaboreetdolorem,seddiamvoluptua.Atveroeosetaccusametjustoduodoloresetearebum.
        </div>
      </div>
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid Proportional sizes 1`] = `
<div
  className={undefined}
>
  <div
    className=""
  >
    <div
      className=""
    >
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          12 columns
        </div>
      </div>
    </div>
    <div
      className=""
    >
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          6 columns
        </div>
      </div>
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          6 columns
        </div>
      </div>
    </div>
    <div
      className=""
    >
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          4 columns
        </div>
      </div>
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          4 columns
        </div>
      </div>
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          4 columns
        </div>
      </div>
    </div>
    <div
      className=""
    >
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          3 columns
        </div>
      </div>
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          3 columns
        </div>
      </div>
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          3 columns
        </div>
      </div>
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          3 columns
        </div>
      </div>
    </div>
    <div
      className=""
    >
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          2 columns
        </div>
      </div>
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          2 columns
        </div>
      </div>
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          2 columns
        </div>
      </div>
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          2 columns
        </div>
      </div>
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          2 columns
        </div>
      </div>
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          2 columns
        </div>
      </div>
    </div>
    <div
      className=""
    >
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          1 column
        </div>
      </div>
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          1 column
        </div>
      </div>
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          1 column
        </div>
      </div>
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          1 column
        </div>
      </div>
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          1 column
        </div>
      </div>
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          1 column
        </div>
      </div>
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          1 column
        </div>
      </div>
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          1 column
        </div>
      </div>
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          1 column
        </div>
      </div>
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          1 column
        </div>
      </div>
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          1 column
        </div>
      </div>
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          1 column
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid Responsive 1`] = `
<div
  className={undefined}
>
  <div
    className=""
  >
    <div
      className=""
    >
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": "#cc0000",
            }
          }
        />
      </div>
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": "#cc0000",
            }
          }
        />
      </div>
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": "#cc0000",
            }
          }
        />
      </div>
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": "#cc0000",
            }
          }
        />
      </div>
    </div>
    <div
      className=""
    >
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": "#00cc00",
            }
          }
        />
      </div>
    </div>
    <div
      className=""
    >
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": "#0000cc",
            }
          }
        />
      </div>
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": "#0000cc",
            }
          }
        />
      </div>
    </div>
    <div
      className=""
    >
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": "#cccc00",
            }
          }
        />
      </div>
      <div
        className=""
      >
        <div
          className=""
        >
          <div
            className=""
          >
            <div
              className={undefined}
              style={
                Object {
                  "backgroundColor": "#cc00cc",
                }
              }
            />
          </div>
          <div
            className=""
          >
            <div
              className={undefined}
              style={
                Object {
                  "backgroundColor": "#cc00cc",
                }
              }
            />
          </div>
          <div
            className=""
          >
            <div
              className={undefined}
              style={
                Object {
                  "backgroundColor": "#cc00cc",
                }
              }
            />
          </div>
          <div
            className=""
          >
            <div
              className={undefined}
              style={
                Object {
                  "backgroundColor": "#cc00cc",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid Size combinations 1`] = `
<div
  className={undefined}
>
  <div
    className=""
  >
    <div
      className=""
    >
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          9 columns
        </div>
      </div>
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          9 columns
        </div>
      </div>
    </div>
    <div
      className=""
    >
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          8 columns
        </div>
      </div>
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          8 columns
        </div>
      </div>
    </div>
    <div
      className=""
    >
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          7 columns
        </div>
      </div>
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          7 columns
        </div>
      </div>
    </div>
    <div
      className=""
    >
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          6 columns
        </div>
      </div>
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          6 columns
        </div>
      </div>
    </div>
    <div
      className=""
    >
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          5 columns
        </div>
      </div>
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          5 columns
        </div>
      </div>
    </div>
    <div
      className=""
    >
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          4 columns
        </div>
      </div>
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          4 columns
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Header Sample 1`] = `
<div
  className={undefined}
>
  <header
    className={undefined}
  >
    <div
      className=""
    >
      <div
        className=""
      >
        <div
          className=""
        >
          <button
            className=""
            disabled={false}
            hidden={false}
            onClick={null}
            type="button"
          >
            <svg
              fill="currentColor"
              height="1em"
              preserveAspectRatio="xMidYMid meet"
              style={
                Object {
                  "color": undefined,
                  "verticalAlign": "middle",
                }
              }
              viewBox="0 0 40 40"
              width="1em"
            >
              <g>
                <path
                  d="m33.2 18.4v3.2h-20.3l9.3 9.4-2.3 2.4-13.4-13.4 13.4-13.4 2.4 2.4-9.4 9.4h20.3z"
                />
              </g>
            </svg>
          </button>
        </div>
        <div
          className=""
        >
          <img
            alt=""
            className={undefined}
            src="logo_pagarme.png"
          />
        </div>
        <div
          className="undefined"
        >
          <button
            className=""
            disabled={false}
            hidden={false}
            onClick={[Function]}
            type="button"
          >
            <svg
              fill="currentColor"
              height="1em"
              preserveAspectRatio="xMidYMid meet"
              style={
                Object {
                  "color": undefined,
                  "verticalAlign": "middle",
                }
              }
              viewBox="0 0 40 40"
              width="1em"
            >
              <g>
                <path
                  d="m31.8 10.7l-9.3 9.3 9.3 9.3-2.4 2.3-9.3-9.3-9.3 9.3-2.3-2.3 9.3-9.3-9.3-9.3 2.3-2.3 9.3 9.3 9.3-9.3z"
                />
              </g>
            </svg>
          </button>
        </div>
      </div>
    </div>
  </header>
</div>
`;

exports[`Storyshots Progress Bar 3 steps 1`] = `
Array [
  <div
    className=""
  >
    <div
      className=""
    >
      <div
        className=""
      >
        <span
          className={undefined}
        >
          1.
        </span>
        Identificação
      </div>
      <div
        className=""
      >
        <span
          className={undefined}
        >
          2.
        </span>
        Endereço de Cobrança
      </div>
      <div
        className=""
      >
        <span
          className={undefined}
        >
          3.
        </span>
        Forma de Pagamento
      </div>
    </div>
  </div>,
  <div
    className={undefined}
  >
    <div
      className={undefined}
      style={
        Object {
          "width": "33.333333333333336%",
        }
      }
    />
  </div>,
  <br />,
  <button
    onClick={[Function]}
  >
    Backward
  </button>,
  <button
    onClick={[Function]}
  >
    Forward
  </button>,
]
`;

exports[`Storyshots Switch Default Theme 1`] = `
<div
  className={undefined}
>
  <section>
    <h2>
      Two options
    </h2>
    <div
      className={undefined}
    >
      <label
        className={undefined}
        htmlFor="Cartão de Crédito"
        style={
          Object {
            "maxWidth": "50%",
          }
        }
      >
        <input
          checked={true}
          id="Cartão de Crédito"
          name={undefined}
          onChange={[Function]}
          type="radio"
          value="creaditcard"
        />
        <span
          className={undefined}
        >
          <h1>
            Cartão de Crédito
          </h1>
          <p>
            Em até 2x sem juros com 20% de desconto na primeira parcela
          </p>
        </span>
      </label>
      <label
        className={undefined}
        htmlFor="Boleto bancário"
        style={
          Object {
            "maxWidth": "50%",
          }
        }
      >
        <input
          checked={false}
          id="Boleto bancário"
          name={undefined}
          onChange={[Function]}
          type="radio"
          value="bankbill"
        />
        <span
          className={undefined}
        >
          <h1>
            Boleto bancário
          </h1>
          <p>
            10% de desconto
          </p>
        </span>
      </label>
    </div>
    <div
      className="undefined"
    />
    <div
      className=""
    />
  </section>
  <section>
    <h2>
      Four options
    </h2>
    <div
      className={undefined}
    >
      <label
        className={undefined}
        htmlFor="Cartão de Crédito"
        style={
          Object {
            "maxWidth": "25%",
          }
        }
      >
        <input
          checked={true}
          id="Cartão de Crédito"
          name={undefined}
          onChange={[Function]}
          type="radio"
          value="creaditcard"
        />
        <span
          className={undefined}
        >
          <h1>
            Cartão de Crédito
          </h1>
          <p>
            Em até 2x sem juros com 20% de desconto na primeira parcela
          </p>
        </span>
      </label>
      <label
        className={undefined}
        htmlFor="Voucher"
        style={
          Object {
            "maxWidth": "25%",
          }
        }
      >
        <input
          checked={false}
          id="Voucher"
          name={undefined}
          onChange={[Function]}
          type="radio"
          value="voucher"
        />
        <span
          className={undefined}
        >
          <h1>
            Voucher
          </h1>
          <p>
            20% de desconto
          </p>
        </span>
      </label>
      <label
        className={undefined}
        htmlFor="Boleto bancário"
        style={
          Object {
            "maxWidth": "25%",
          }
        }
      >
        <input
          checked={false}
          id="Boleto bancário"
          name={undefined}
          onChange={[Function]}
          type="radio"
          value="bankbill"
        />
        <span
          className={undefined}
        >
          <h1>
            Boleto bancário
          </h1>
          <p>
            10% de desconto
          </p>
        </span>
      </label>
      <label
        className={undefined}
        htmlFor="Bitcoin"
        style={
          Object {
            "maxWidth": "25%",
          }
        }
      >
        <input
          checked={false}
          id="Bitcoin"
          name={undefined}
          onChange={[Function]}
          type="radio"
          value="bitcoin"
        />
        <span
          className={undefined}
        >
          <h1>
            Bitcoin
          </h1>
          <p>
            20% de desconto
          </p>
        </span>
      </label>
    </div>
    <div
      className="undefined"
    />
    <div
      className=""
    />
    <div
      className=""
    />
    <div
      className=""
    />
  </section>
</div>
`;

exports[`Storyshots Typography Styles 1`] = `
<div
  className=""
>
  <div>
    <span>
      h1
    </span>
    <h1>
      Avenir 28
    </h1>
  </div>
  <div>
    <span>
      h2
    </span>
    <h2>
      Avenir 24
    </h2>
  </div>
  <div>
    <span>
      h3
    </span>
    <h3>
      Avenir 18
    </h3>
  </div>
  <hr />
  <div>
    <span>
      body
    </span>
    <div>
      <div>
        Avenir 16 normal
      </div>
      <div>
        <i>
          Avenir 16 italic
        </i>
      </div>
      <div>
        <b>
          Avenir 16 bold
        </b>
      </div>
    </div>
  </div>
  <hr />
  <div>
    <span>
      paragraph
    </span>
    <div>
      <h3>
        SOME H3 TITLE
      </h3>
      <p>
        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
      </p>
      <p>
        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
      </p>
    </div>
  </div>
  <hr />
  <div>
    <span>
      lists
    </span>
    <div>
      <ul>
        <li>
          Lorem ipsum dolor sit amet
        </li>
        <ul>
          <li>
            Lorem ipsum dolor sit amet
          </li>
          <ul>
            <li>
              Lorem ipsum dolor sit amet
            </li>
          </ul>
        </ul>
        <li>
          Lorem ipsum dolor sit amet
        </li>
      </ul>
    </div>
  </div>
</div>
`;
